--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CloudNova - Building the Future of Software</title>
-    <meta name="description" content="CloudNova delivers cutting-edge software solutions that transform businesses and accelerate digital innovation. Expert web development, mobile apps, cloud solutions, and more." />
-    <meta name="author" content="CloudNova" />
-    <meta name="keywords" content="software development, web development, mobile apps, cloud solutions, digital transformation, CloudNova" />
+    <title>TriNextGen - Building the Future of Software</title>
+    <meta name="description" content="TriNextGen delivers cutting-edge software solutions that transform businesses and accelerate digital innovation. Expert web development, mobile apps, cloud solutions, and more." />
+    <meta name="author" content="TriNextGen" />
+    <meta name="keywords" content="software development, web development, mobile apps, cloud solutions, digital transformation, TriNextGen" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://cloudnova.com/" />
-    <meta property="og:title" content="CloudNova - Building the Future of Software" />
-    <meta property="og:description" content="CloudNova delivers cutting-edge software solutions that transform businesses and accelerate digital innovation." />
+    <meta property="og:url" content="https://trinextgen.com/" />
+    <meta property="og:title" content="TriNextGen - Building the Future of Software" />
+    <meta property="og:description" content="TriNextGen delivers cutting-edge software solutions that transform businesses and accelerate digital innovation." />
     <meta property="og:image" content="/hero.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://cloudnova.com/" />
-    <meta property="twitter:title" content="CloudNova - Building the Future of Software" />
-    <meta property="twitter:description" content="CloudNova delivers cutting-edge software solutions that transform businesses and accelerate digital innovation." />
+    <meta property="twitter:url" content="https://trinextgen.com/" />
+    <meta property="twitter:title" content="TriNextGen - Building the Future of Software" />
+    <meta property="twitter:description" content="TriNextGen delivers cutting-edge software solutions that transform businesses and accelerate digital innovation." />
     <meta property="twitter:image" content="/hero.png" />
 
     <!-- Fonts -->
@@ -29,7 +29,7 @@
     
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" />
-    <link rel="canonical" href="https://cloudnova.com/" />
+    <link rel="canonical" href="https://trinextgen.com/" />
   </head>
 
   <body>
